# rknn-model-zoo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: classify_example.cpp  yolo_detect_example.cpp
src/: types.hpp
src/task/: classify.cpp  classify.hpp  engine.cpp  engine.hpp  yolo.cpp  yolo.hpp  yolo_detect.cpp  yolo_detect.hpp
src/utils/: drawing.cpp  drawing.hpp  label.cpp  label.hpp  ops.cpp  ops.hpp
